--- a/src/app/components/principal/principal/principal.component.html
+++ b/src/app/components/principal/principal/principal.component.html
@@ -1,4 +1,4 @@
-<!--<div style="display: flex; align-items: center; justify-content: center;">
+<div style="display: flex; align-items: center; justify-content: center;">
 
     <button mat-raised-button
       style="background-color: #b76e79;margin: 2%;width: 400px;height: 150px;font-size: larger;font-family: monospace;color: white;">
@@ -14,15 +14,4 @@
   
     <button mat-raised-button
       style="background-color: #b76e79;margin: 2%;width: 400px;height: 150px;font-size: larger;font-family: monospace;color: white;">Contacto</button>
-  </div>-->
-
-  <div style="border: 5%;color: pink;border-style: dotted;">
-    <h5 style="text-align: center;font-size: medium;">Dermeva</h5>
-    <h1 style="text-align: center;font-size: medium">Cuenta de Cobro</h1>
-    <h3 style="text-align: center;font-size: medium"> Daniel Alfonso</h3>
-
-    <br>
-    <br>
-
-
   </div>
