--- a/src/app/components/select-services/select-services.component.html
+++ b/src/app/components/select-services/select-services.component.html
@@ -1,4 +1,4 @@
-<mat-card style="flex: 1; margin-bottom: 2%;" class="card">
+<mat-card appearance="outlined" style="flex: 1; margin-bottom: 1%;" class="card">
     <mat-card-title style="font-family: Montserrat;"><b>{{this.services?.serviceName}}</b></mat-card-title>
     <mat-card-content>
         <h3 style="font-family: Montserrat;">{{this.services?.serviceValue  | currency}} </h3>
