--- a/src/styles.css
+++ b/src/styles.css
@@ -27,6 +27,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     background-color: #b76e79 !important;
 }
 
-.mat-button{
+.mat-mdc-button{
   background-color: #f0c7c2;
 }
