Initialize FireBase Services Parametrics

--- a/src/app/components/invoice-data/invoice-data/invoice-data.component.html
+++ b/src/app/components/invoice-data/invoice-data/invoice-data.component.html
@@ -193,7 +193,7 @@
       <mat-step>
         <ng-template matStepLabel>Resumen</ng-template>
         <mat-card appearance="outlined">
-          <button mat-button style="margin: 0.5%;display: flexbox;width: 100%;" (click)="gpdf()">Visualizar Cuenta de Cobro</button>
+          <button mat-button style="margin: 0.5%;display: flexbox;width: 100">Visualizar Cuenta de Cobro</button>
         </mat-card>
       </mat-step>
     </mat-stepper>
